[package]
name = "eterna"
version = "0.0.0"
authors = ["NWPlayer123 <nikki@aetheria.dev>"]
edition = "2021"
description = "A modern GameCube emulator written in Rust."
readme = "README.md"
repository = "https://github.com/NWPlayer123/Eterna"
license = "MIT OR Apache-2.0"
keywords = ["emulator", "emulation"]

[dependencies]
